# A0C4-alphazero-for-connect-4

./: .gitignore  README.md  makefile  pyproject.toml  run.sh
config/: cfg.yaml  cfg_test.yaml
src/: cli.py  testing.py  utils.py
src/agents/: agent.py  alpha_agent.py
src/alpha_zero/: eval.py  mcts.py  neural_net.py  train.py
src/boards/: bitboard.py  classic_board.py  ui.py
