[project]
name = "a0c4"
version = "0.1.0"
description = "AlphaZero for Connect 4"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.5",
    "pyinstrument>=4.6.0",
    "torch>=2.1.2",
    "pygame>=2.0.0",
    "tqdm>=4.0.0",
    "pyyaml>=6.0",
    "requests>=2.0.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
    ".venv",
    "doc-venv",
    ".svn",
    "build",
    "notebooks",
    "llmops",
    "tabicl",
    "tabh2o",
]

[tool.ruff.format]
quote-style = "double"            # Like Black, use double quotes for strings.
indent-style = "space"            # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto"              # Like Black, automatically detect the appropriate line ending.

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # comprehensions
    # "SIM",  # flake8-simplify
    "I",   # isort
    "ERA", # eradicate
    "T20", # print
    # "PL",  # pylint
]
ignore = [
    "T201"
]
